--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,10 +1,10 @@
-deploy.ant.properties.file=C:\\Users\\Diego Torres\\AppData\\Roaming\\NetBeans\\8.1\\config\\GlassFishEE6\\Properties\\gfv386783458.properties
+deploy.ant.properties.file=C:\\Users\\Diego Torres\\AppData\\Roaming\\NetBeans\\8.2\\config\\GlassFishEE6\\Properties\\gfv31066026024.properties
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=C:/Users/Diego Torres/GlassFish_Server/glassfish/domains/domain1
+j2ee.server.domain=C:/Users/Diego Torres/GlassFish_Server/glassfish/domains/domain
 j2ee.server.home=C:/Users/Diego Torres/GlassFish_Server/glassfish
-j2ee.server.instance=[C:\\Users\\Diego Torres\\GlassFish_Server\\glassfish;C:\\Users\\Diego Torres\\GlassFish_Server\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
+j2ee.server.instance=[C:\\Users\\Diego Torres\\GlassFish_Server\\glassfish;C:\\Users\\Diego Torres\\GlassFish_Server\\glassfish\\domains\\domain]deployer:gfv3ee6wc:localhost:20228
 j2ee.server.middleware=C:/Users/Diego Torres/GlassFish_Server
 javac.debug=true
 javadoc.preview=true
 selected.browser=Chrome
-user.properties.file=C:\\Users\\Diego Torres\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
+user.properties.file=C:\\Users\\Diego Torres\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
